# atom-api-python

./: .env.example  .gitignore  application-example.yaml  main.py  pyproject.toml  readme.md  ruoyi.sql
app/model/: __init__.py  sys_config.py  sys_dept.py  sys_dict_data.py  sys_dict_type.py  sys_logininfor.py  sys_menu.py  sys_oper_log.py  sys_post.py  sys_role.py  sys_role_dept.py  sys_role_menu.py  sys_user.py  sys_user_post.py  sys_user_role.py
app/service/: base_service.py
common/: constant.py  exception.py  ip_address.py  security.py
config/: config.py
framework/: database.py  redis.py  response.py
framework/dal/: __init__.py  database.py
src/api/service/: base_service.py
src/config/: config.py
src/dal/: __init__.py  redis.py
src/exception/: exception.py
src/regex/:  regex.py
src/response/: response.py
src/security/: security.py
