[project]
name = "atom-api"
version = "0.1.0"
description = "atom-api python"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "pydantic-yaml>=1.6.0",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "redis>=6.4.0",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.37.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
package = false
